[task] Implement new statistics service : implement support of several topics